// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <HalfStar /> icon should render HalfStar icon correctly with default props 1`] = `
<svg
  className="halfStarIcon"
  height={40}
  viewBox="0 0 100 100"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    HalfStar Icon
  </title>
  <path
    className="emptyStarIconPath"
    d="M100,38.76,62.3,38.1,50,2.44,37.7,38.1,0,38.76,30.12,61.48l-11,36.06L50,75.93l30.9,21.63-11-36.08ZM74.24,88.39,50,71.43h0V13.78h0l9.64,28,29.58.52L65.61,60.1Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Test <HalfStar /> icon should render HalfStar icon correctly with props 1`] = `
<svg
  className="halfStarIcon"
  height={30}
  viewBox="0 0 100 100"
  width={30}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    HalfStar Icon
  </title>
  <path
    className="emptyStarIconPath"
    d="M100,38.76,62.3,38.1,50,2.44,37.7,38.1,0,38.76,30.12,61.48l-11,36.06L50,75.93l30.9,21.63-11-36.08ZM74.24,88.39,50,71.43h0V13.78h0l9.64,28,29.58.52L65.61,60.1Z"
    fill="#8A2BE2"
  />
</svg>
`;
